setup auto deploy

--- a/content/about.toml
+++ b/content/about.toml
@@ -3,10 +3,8 @@ title = "About"
 
 [profile]
 research_interests = [
-  "Computational Physics",
-  "Mathematical Principles",
-  "Proof of Theorems"
-]
+  "Behavioral Public Administration"
+  ]
 
 [[sections]]
 id = "about"
