--- a/content/config.toml
+++ b/content/config.toml
@@ -1,26 +1,26 @@
 [site]
-title = "Jiale Liu"
-description = "PhD student at the University of Example."
+title = "Ziye WENG"
+description = "Ph.D. Student in Public Administration at the Shanghai Jiao Tong University."
 favicon = "/favicon.svg"
-last_updated = "November 18, 2025"
+last_updated = "Feb 19, 2026"
 
 [author]
-name = "Jiale Liu"
-title = "PhD Student"
-institution = "University of Example"
+name = "Ziye WENG"
+title = "Ph.D. Student"
+institution = "School of International and Public Affairs, Shanghai Jiao Tong University"
 avatar = "/bio.jpg"
 
 [social]
 # Contact information (leave blank or delete to hide)
 
-email = "john.doe@example.com"
-location = "City, Country"
+email = "ziyeweng@sjtu.edu.cn"
+location = "Shanghai, China"
 location_url = "https://maps.google.com"
 location_details = [
-  "Room 123, Science Building,",
-  "University Avenue, City, Country"
+  "ZhiXinXiZhai Building,",
+  "HUASHAN ROAD 1954, Shanghai, China"
 ]
-google_scholar = "https://scholar.google.com"
+google_scholar = "https://scholar.google.com/citations?user=W_pKPssAAAAJ&hl=zh-CN&oi=ao"
 orcid = "https://orcid.org"
 github = "https://github.com"
 linkedin = "https://linkedin.com"
