--- a/content/config.toml
+++ b/content/config.toml
@@ -23,7 +23,7 @@ location_details = [
 google_scholar = "https://scholar.google.com/citations?user=W_pKPssAAAAJ&hl=zh-CN&oi=ao"
 orcid = "https://orcid.org"
 github = "https://github.com"
-linkedin = "https://linkedin.com"
+linkedin = "https://www.linkedin.com/in/ziye-weng-779521290/?locale=en-US"
 
 [features]
 # Show a like button on the about page
