--- a/content/news.toml
+++ b/content/news.toml
@@ -1,7 +1,7 @@
 [[news]]
-date = "2025-11"
-content = "Our work has been accepted by a prestigious journal 🎉"
+date = "2026-02"
+content = "My paper has been accepted by ASPA 2026 conference and received the SCPA 2026 Student Travel Award 🎉, see you in Los Angeles then!"
 
 [[news]]
-date = "2025-09"
-content = "Starting my PhD at the University of Example"
+date = "2025-11"
+content = "My paper has been accepted by IRSPM 2026 conference, see you in Perth then!"
