--- a/content/services.toml
+++ b/content/services.toml
@@ -4,6 +4,6 @@ description = "Professional services and community involvement."
 
 [[items]]
 title = "Reviewer"
-subtitle = "Journal Name"
-date = "2024"
-content = "Reviewed papers for..."
+subtitle = "PMR, PA, among others"
+date = "until 2026"
+content = ""
