--- a/content/teaching.toml
+++ b/content/teaching.toml
@@ -3,8 +3,8 @@ title = "Teaching"
 description = "Courses I have taught or assisted with."
 
 [[items]]
-title = "Example Course"
+title = "Upcoming"
 subtitle = "Teaching Assistant"
-date = "2024"
-content = "Description of the course and responsibilities."
-tags = ["Undergraduate", "CS"]
+date = "2026"
+content = "..."
+tags = ["Undergraduate", "PA"]
